--- a/index.html
+++ b/index.html
@@ -1,134 +1,131 @@
 <!DOCTYPE html>
 
 	<head>
-		<title>Aashita & Parth</title>
+		<title>Anuj Shah</title>
 		<link rel="icon" href="favicon.gif">
-		<link href="https://fonts.googleapis.com/css?family=Dosis|Poiret+One|Tangerine|Architects+Daughter" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="AashitaParth.css">
+		<link href="https://fonts.googleapis.com/css?family=Dosis|Poiret+One|Tangerine|Architects+Daughter|Raleway" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="AnujShah.css">
 	</head>
 	
-	<body background = "pattern.jpg">
-	
-	    <b><p id = "timeLeft"></p></b>
-		<br><br><br><br>
+	<body>
 		
-		<b><p id = "blessing">Om Shri Ganeshaya Namaha</p></b>
-		<br><br><br><br>
+		<h1 class = "text">Anuj Shah</h1>
 		
-		<h1 class = "text">Aashita & Parth</h1>
-		
-		<img id = "ganesh" src = "GaneshArt.png"/>
-		<br><br><br><br>
-		
-		<ul class="tab">
+		<ul class = "tab">
 		  <li><a href = "#Home" class="tablinks" onclick="openTab(event, 'Home')">Home</a></li>
-		  <li><a href = "#WhenParthMetAashita" class="tablinks" onclick="openTab(event, 'When Parth Met Aashita')">When Parth Met Aashita</a></li>
-		  <li><a href = "#Accommodation" class="tablinks" onclick="openTab(event, 'Accommodation')">Accommodation</a></li>
-		  <li><a href = "#Photos" class="tablinks" onclick="openTab(event, 'Photos')">Photos</a></li>
-		  <li><a href = "#RSVP" class="tablinks" onclick="openTab(event, 'RSVP')">RSVP</a></li>
+		  <li><a href = "#AboutMe" class="tablinks" onclick="openTab(event, 'About Me')">About Me</a></li>
+		  <li><a href = "#Contact" class="tablinks" onclick="openTab(event, 'Contact')">Contact</a></li>
 		</ul>
 		
 		<div id = "Home" class = "tabcontent">
 			<br>
-			<center><img id = "main_pic" src = "AashiParth.jpg"/></center>
-			<h2 class = "text">September 3rd, 2017</h2>
-			<h2 class = "text"><a href = "https://greenwich.regency.hyatt.com/en/hotel/home.html">Hyatt Regency Greenwich</a></h2>
+			<center><img class = "main_pics" src = "ProfilePic.png"/></center>
 			<br><br>
-			<center><img src = "Barat.png"/></center>
+			<center><a href = "http://uci.edu/"><img src = "UCI_Words.png"/></a></center>
+			<br><br>
+			<center><a id = "resume" href = "AnujShah.pdf" download>Download R&eacute;sum&eacute; </a></center>
 		</div>
 
-		<div id = "When Parth Met Aashita" class = "tabcontent">
-		    <h2 class = "section">Our Story</h2>
-			<p id = "story">It is a well known fact that Parth and Aashita met during their time at Boston University. What you may not know is that this sweet love story started over a Cinnamon Dulce Latte at Starbucks. Before this day, Parth and Aashita had met multiple times and had spent time together as friends. But this day felt different. As they sat at a table cramming for their exams, he couldn't help but steal glimpses of her out of the corner of his eye every minute or two. She looked different to him in a way he couldn't explain, but he knew that all he wanted to do was spend more time with her.</p>
+		<div id = "About Me" class = "tabcontent">
+		
 			<br>
-			<p id = "story">Parth knew he needed a strategy. His first idea was to invite himself over to eat all of the pao bhaji that Aashita's mom had made for her. Aashita was not getting the hint, so he proceeded to boldly ask her out for dinner over text. Still, no matter how many texts he sent, Aashita could not understand his intent. Parth grew frustrated but even more determined.</p>
-			<br>
-			<p id = "story">The year went on and finally it was fall -- the weekend of Halloween. All of their friends knew Parth was trying to ask Aashita out on a date, so a few of them kindly informed her of this. One particular friend even pushed Aashita to sit next to him so that they could finally talk. As she sat there in her Powerpuff Girls costume, Parth finally asked the long awaited question in person and to his surprise and delight, she said yes. This became and still is Parth's greatest achievement. As for Aashita, this became the first "yes" she would say to him over the next several years.</p>
-			<br>
-			<h2 class = "section">The Proposal (4.29.16)</h2>
-			<p id = "story">Their years in Boston flew by and Parth and Aashita graduated college and started new chapters in their lives all the while continuing the story they had created together. Parth started and finished medical school. Aashita went abroad to London for an exciting work opportunity and traveled through Europe. Skype and Facetime became second nature to both of them.</p>
-			<br>
-			<p id = "story">It was during this time that Parth had a thought. Through all of the distance and time apart, one thing was very clear to him -that there was still only one girl he wanted to spend the rest of his life with- and that was Aashita. He knew it was time to start thinking about the grand gesture to show her this.</p>
-			<br>
-			<p id = "story">Parth knew Aashita: He knew her love for travel, for desserts, and her appreciation for art (which he learned of during all of their New York City museum dates). So when the time came, he took her love for art and decided to create something he thought she would love:</p>
-			<br>
-			<center><img src = "ProposalScene.jpg"/></center>
-			<br>
-			<p id = "story">The day of the proposal, Parth stood in the Anderson Gallery in New York City with easels surrounding him, each easel holding a photograph of Parth, Aashita, and some aspect of their journey together. It was their very own art exhibit. He was anxious but determined -- just as he had been all of those years ago. In the months of planning, he had somehow gotten Aashita to meet him here without her knowing exactly why.</p>
-			<p id = "story">Needless to say, Aashita arrived at the gallery, Parth got down on one knee, and Aashita said the final "yes."</p>
-			<br>
-			<center><img src = "SheSaidYes.jpg"/></center>
+			
+			<h2 class = "section">Places I've Worked</h2>
+			<a href = "http://www.greenburghny.com/">
+				<img class = "logo" src = "Greenburgh_Logo.gif"/>
+			</a>
+			<a href = "http://www.wayup.com/">
+				<img class = "logo" src = "WayUp_Logo.jpg"/>
+			</a>
+			<a href = "http://www.iacapps.com/">
+				<img class = "logo" src = "IAC_Applications_Logo.png"/>
+			</a>
+			<a href = "http://www.joyrun.com/">
+				<img class = "logo" src = "JoyRun_Logo.png"/>
+			</a>
+			<a href = "http://www.idtech.com/locations/new-york-summer-camps/new-york/id-programming-nyu/">
+				<img class = "logo" src = "iD_Tech_Logo.png"/>
+			</a>
+			
+			<h2 class = "section">HackUCI
+				<a href = "http://hackuci.com/"/>
+					<img src = "HackUCI_Logo.png"/>
+				</a>
+				<a href = "http://hack.ics.uci.edu/"/>
+					<img src = "Hack_Logo.png"/>
+				</a>
+			</h2>
+			<img class = "about" src = "HackUCI2015_Group.jpg"/>
+			
+			<h2 class = "section">Sonder VR</h2>
+			<!--<img src = "Butterworth.jpg"/>-->
+			<img class = "about" src = "Ingenuity.jpg"/>
+			
+			<h2 class = "section">Space Gods
+				<a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGods.zip">
+					<img class = "mini_logo" src = "Windows_Logo.png"/>
+				</a>
+				<a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGodsApp.zip">
+					<img class = "mini_logo" src = "Apple_Logo.png"/>
+				</a>
+			</h2>
+			<img src = "Space_Gods.png"/>
+			
+			<h2 class = "section">The Simple Approach
+				<a href = "http://www.facebook.com/Simple-Approach-139281669462672/">
+					<img class = "mini_logo" src = "Facebook_Logo.png"/>
+				</a>
+				<a href = "http://www.youtube.com/user/SimpleApproachBand">
+					<img class = "mini_logo" src = "YouTube_Logo.png"/>
+				</a>
+				<a href = "http://soundcloud.com/the-simple-approach">
+					<img class = "mini_logo" src = "SoundCloud_Logo.png"/>
+				</a>
+			</h2>
+			<img class = "about" src = "Band_Instruments.jpg"/>
+			<br><br>
+			<img class = "about" src = "Simple_Approach_Black.jpg"/>
+			<br><br>
+			<img class = "about" src = "Simple_Approach_Performing.jpg"/>
+			
 		</div>
 		
-		<div id = "Accommodation" class = "tabcontent">
-			<br>
-		</div>
-		
-		<div id = "Photos" class = "tabcontent">
-			<br>
-			<center><img src = "Aashiqui3.jpg"/></center>
-			<br><br>
-			<center><img src = "FamilyMinusAnuj.jpg"/></center>
-			<br><br>
-			<center><img src = "Parents.jpg"/></center>
-			<br><br>
-			<center><img src = "Graduation.jpg"/></center>
-			<br><br>
-			<center><img src = "CuteBirthdayPicture.jpg"/></center>
-		</div>
-		
-		<div id = "RSVP" class = "tabcontent">
-		    <h2 class = "section">RSVP</h2>
-			<form id = "form" name = "rsvp" method = "post" action = "email_handler.php" onsubmit = "return validateForm()">
+		<div id = "Contact" class = "tabcontent">
+			<h2>Contact Me</h2>
+			<form id = "form" name = "contact_form" method = "post" action = "email_handler.php" onsubmit = "return validateForm()">
 				<p id = "first_name_text"><font color="red">*</font>First Name:
-					<input id = "first_name" name = "first_name" type = "text" placeholder = "" spellcheck = "false" size = "20" maxlength = "100" required/>
+					<input id = "first_name" name = "first_name" type = "text" placeholder = "" spellcheck = "false" size = "40" maxlength = "100" required/>
 				</p>
 				<p id = "last_name_text"><font color="red">*</font>Last Name:
-					<input id = "last_name" name = "last_name" type = "text" placeholder = "" spellcheck = "false" size = "20" maxlength = "100" required/>
+					<input id = "last_name" name = "last_name" type = "text" placeholder = "" spellcheck = "false" size = "40" maxlength = "100" required/>
 				</p>
 				<p><font color = "red">*</font>Email:
-					<input id = "email" name = "email" type = "text" placeholder = "" spellcheck = "false" size = "50" maxlength = "100" required/>
+					<input id = "email" name = "email" type = "text" placeholder = "" spellcheck = "false" size = "80" maxlength = "100" required/>
 				</p>
-				<p id = "attending"><font color = "red">*</font>Are you attending?
-					<input id = "yes" type = "radio" name = "choice" value = "yes">
-					<label>Yes</label>
-					<input id = "no" type = "radio" name = "choice" value = "no">
-					<label>No</label>
-				</p>
-				<p>Number of Attendees:
-					<input id = "num_attendees" name = "num_attendees" type = "number" name = "attendees" value = "1" min = "0" max = "10"/>
-				</p>
-				<p>Who else is attending?
-					<input id = "names" name = "names" type = "text" spellcheck = "false" size = "100" maxlength = "200" />
-				</p>
-				<p id = "teams">Choose Your Team:
-					<input id = "Aashita" type = "radio" name = "team" value = "Aashita">
-					<label>Team Aashita</label>
-					<input id = "Parth" type = "radio" name = "team" value = "Parth">
-					<label>Team Parth</label>
-				</p>
-				<p>Message for Bride/Groom:</p>
-				<textarea id = "message" name = "message" rows = "4" cols = "60" placeholder = "Your Text Here"></textarea>
+				<p>Message:</p>
+				<textarea id = "message" name = "message" rows = "10" cols = "100" placeholder = "Your Text Here"></textarea>
 				<br><br>
 				<font id = "required" color="red">* Required</font>
 				<br><br>
 				<input id = "submit" type="submit" name="btnSubmit" style="width:100px;height:40px;" value="Submit"/>
+				<br><br>
 			</form>
+			<br><br>
+			<img src = "Hack_Corporate_Business_Card.png"/>
+			<br><br>
+			<a href = "http://www.linkedin.com/in/anujshah">
+				<img src = "LinkedIn_Logo.png"/>
+			</a>
+			<a href = "http://www.github.com/anujs3"/>
+				<img src = "GitHub_Logo.png"/>
+			</a>
 		</div>
 		
 		<br><br>
 		
-		<p id = "hastags">#WhenParthMetAashi #Aashiqui3 #FromLoveToShahdi</p>
+		<a id = "up" href = "#top">Back to Top</a>
 		
-		<audio id = "sound" controls loop>
-			<source src = "TumHiHo.mp3"> type = "audio/mpeg">
-		</audio>
-		
-		<br><br>
-		
-		<a style = "margin-left: 20px;" href = "#top">Back to Top</a>
-		
-		<script src = "AashitaParth.js"></script>
+		<script src = "AnujShah.js"></script>
 		
 	</body>
 </html>
