--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				<img src = "LinkedIn_Logo.png"/>
 			</a>
 			<a href = "http://www.github.com/anujs3"/>
-				<img src = "GitHub_Logo.png"/>
+				<img style = "width: 500px;" src = "GitHub_Logo.png"/>
 			</a>
 		</div>
 		
