--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 
 	<head>
 		<title>Anuj Shah</title>
-		<link rel="icon" href="favicon.gif">
-		<link href="https://fonts.googleapis.com/css?family=Dosis|Poiret+One|Tangerine|Architects+Daughter|Raleway" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="AnujShah.css">
+		<link href = "https://fonts.googleapis.com/css?family=Dosis|Poiret+One|Tangerine|Architects+Daughter|Raleway" rel = "stylesheet">
+		<link rel = "stylesheet" type = "text/css" href = "AnujShah.css">
 	</head>
 	
 	<body>
@@ -12,9 +11,9 @@
 		<h1 class = "text">Anuj Shah</h1>
 		
 		<ul class = "tab">
-		  <li><a href = "#Home" class="tablinks" onclick="openTab(event, 'Home')">Home</a></li>
-		  <li><a href = "#AboutMe" class="tablinks" onclick="openTab(event, 'About Me')">About Me</a></li>
-		  <li><a href = "#Contact" class="tablinks" onclick="openTab(event, 'Contact')">Contact</a></li>
+		  <li><a href = "#Home" class = "tablinks" onclick = "openTab(event, 'Home')">Home</a></li>
+		  <li><a href = "#AboutMe" class = "tablinks" onclick = "openTab(event, 'About Me')">About Me</a></li>
+		  <li><a href = "#Contact" class = "tablinks" onclick = "openTab(event, 'Contact')">Contact</a></li>
 		</ul>
 		
 		<div id = "Home" class = "tabcontent">
@@ -92,7 +91,7 @@
 		
 		<div id = "Contact" class = "tabcontent">
 			<h2>Contact Me</h2>
-			<form id = "form" name = "contact_form" method = "post" action = "email_handler.php" onsubmit = "return validateForm()">
+			<!--<form id = "form" name = "contact_form" method = "post" action = "email_handler.php" onsubmit = "return validateForm()">
 				<p id = "first_name_text"><font color="red">*</font>First Name:
 					<input id = "first_name" name = "first_name" type = "text" placeholder = "" spellcheck = "false" size = "40" maxlength = "100" required/>
 				</p>
@@ -109,16 +108,16 @@
 				<br><br>
 				<input id = "submit" type="submit" name="btnSubmit" style="width:100px;height:40px;" value="Submit"/>
 				<br><br>
-			</form>
+			</form>-->
 			<br><br>
 			<img src = "Hack_Corporate_Business_Card.png"/>
 			<br><br>
 			<a href = "http://www.linkedin.com/in/anujshah">
 				<img src = "LinkedIn_Logo.png"/>
 			</a>
-			<a href = "http://www.github.com/anujs3"/>
+			<!--<a href = "http://www.github.com/anujs3"/>
 				<img style = "width: 500px;" src = "GitHub_Logo.png"/>
-			</a>
+			</a>-->
 		</div>
 		
 		<br><br>
