--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		
 		<div id = "Contact" class = "tabcontent">
 			<h2>Contact Me</h2>
-			<form id = "form" name = "contact_form" method = "post" action = "email_handler.php" onsubmit = "return validateForm()">
+			<!--<form id = "form" name = "contact_form" method = "post" action = "email_handler.php" onsubmit = "return validateForm()">
 				<p id = "first_name_text"><font color="red">*</font>First Name:
 					<input id = "first_name" name = "first_name" type = "text" placeholder = "" spellcheck = "false" size = "40" maxlength = "100" required/>
 				</p>
@@ -109,7 +109,7 @@
 				<br><br>
 				<input id = "submit" type="submit" name="btnSubmit" style="width:100px;height:40px;" value="Submit"/>
 				<br><br>
-			</form>
+			</form>-->
 			<br><br>
 			<img src = "Hack_Corporate_Business_Card.png"/>
 			<br><br>
