Added programming experience.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<ul class = "tab">
 		  <li><a href = "#Home" class = "tablinks" onclick = "openTab(event, 'Home')">Home</a></li>
 		  <li><a href = "#AboutMe" class = "tablinks" onclick = "openTab(event, 'About Me')">About Me</a></li>
+		  <li><a href = "#Languages" class = "tablinks" onclick = "openTab(event, 'Expertise')">Programming Expertise</a></li>
 		  <li><a href = "#Contact" class = "tablinks" onclick = "openTab(event, 'Contact')">Contact</a></li>
 		</ul>
 		
@@ -87,6 +88,32 @@
 			<img class = "about" src = "Simple_Approach_Black.jpg"/>
 			<br><br>
 			<img class = "about" src = "Simple_Approach_Performing.jpg"/>
+			
+		</div>
+		
+		<div id = "Expertise" class = "tabcontent">
+			<h2>Programming Languages</h2>
+			<img style = "margin-right: 50px;" class = "logo" src = "Java.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Python.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "C++.png"/>
+			<br><br>
+			<img style = "margin-right: 50px;" class = "logo" src = "HTML.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "CSS.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "JavaScript.png"/>
+			<br><br>
+			<img style = "margin-right: 50px;" class = "logo" src = "C.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "PHP.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "RLang.png"/>
+			<br><br>
+			<h2>Programs</h2>
+			<img style = "margin-right: 50px;" class = "logo" src = "AndroidStudio.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Unity.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Photoshop.jpg"/>
+			<br><br>
+			<img style = "margin-right: 50px;" class = "logo" src = "Eclipse.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "VisualStudio.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "R.png"/>
+			<br><br>
 			
 		</div>
 		
