--- a/index.html
+++ b/index.html
@@ -57,10 +57,12 @@
 				</a>
 			</h2>
 			<img class = "about" src = "HackUCI2015_Group.jpg"/>
+			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>HackUCI is a 3-day hackathon at UC Irvine where hundreds of college students come together to develop software from scratch to win prizes. As the Director of Corporate Outreach, I am responsible for contacting sponsors to attend our annual event. In November 2015, we hosted our second hackathon at the eSports Arena in Santa Ana, California. Read more about it <a href = "https://hack.ics.uci.edu/2015/11/23/hackuci-2015/">here!</a></i></h3>					
 			
 			<h2 class = "section">Sonder VR</h2>
 			<!--<img src = "Butterworth.jpg"/>-->
 			<img class = "about" src = "Ingenuity.jpg"/>
+			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>Sonder VR is an application that helps people with Autism Spectrum Disorder learn and practice their social skills. I helped develop the application in Unity and create the business case for the product. Our application uses virtual reality to teach kids with autism about body language. We had participated in the <a href = "http://tech.uci.edu/competitions/">Butterworth Development Competition at UCI</a> and won first place!</i></h3>
 			
 			<h2 class = "section">Space Gods
 				<a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGods.zip">
@@ -71,6 +73,7 @@
 				</a>
 			</h2>
 			<img src = "Space_Gods.png"/>
+			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>Space Gods is a 2D arena-based fighting game where you battle gods from different universes. For this game project, I collaborated with 10+ developers. I was in charge of programming the game and creating the sound effects. Our game is available for download on <a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGods.zip">PC</a> and <a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGodsApp.zip">Mac</a>. Check it out!</i></h3>
 			
 			<h2 class = "section">The Simple Approach
 				<a href = "http://www.facebook.com/Simple-Approach-139281669462672/">
@@ -88,6 +91,7 @@
 			<img class = "about" src = "Simple_Approach_Black.jpg"/>
 			<br><br>
 			<img class = "about" src = "Simple_Approach_Performing.jpg"/>
+			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>I'm the lead drummer in a classy rock band called The Simple Approach. For our senior project, we created an album of eleven original songs. Here are some pictures from our gig at the <a href = "http://greenburghnaturecenter.org/">Greenburgh Nature Center</a>.</i></h3>
 			
 		</div>
 		
