--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<ul class = "tab">
 		  <li><a href = "#Home" class = "tablinks" onclick = "openTab(event, 'Home')">Home</a></li>
 		  <li><a href = "#AboutMe" class = "tablinks" onclick = "openTab(event, 'About Me')">About Me</a></li>
-		  <li><a href = "#Languages" class = "tablinks" onclick = "openTab(event, 'Expertise')">Programming Expertise</a></li>
+		  <li><a href = "#Expertise" class = "tablinks" onclick = "openTab(event, 'Expertise')">Programming Expertise</a></li>
 		  <li><a href = "#Contact" class = "tablinks" onclick = "openTab(event, 'Contact')">Contact</a></li>
 		</ul>
 		
@@ -76,7 +76,7 @@
 			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>Space Gods is a 2D arena-based fighting game where you battle gods from different universes. For this game project, I collaborated with 10+ developers. I was in charge of programming the game and creating the sound effects. Our game is available for download on <a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGods.zip">PC</a> and <a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGodsApp.zip">Mac</a>. Check it out!</i></h3>
 			
 			<h2 class = "section">The Simple Approach
-				<a href = "http://www.facebook.com/Simple-Approach-139281669462672/">
+				<a href = "https://www.facebook.com/simpleapproach">
 					<img class = "mini_logo" src = "Facebook_Logo.png"/>
 				</a>
 				<a href = "http://www.youtube.com/user/SimpleApproachBand">
@@ -110,13 +110,25 @@
 			<img style = "margin-right: 50px;" class = "logo" src = "RLang.png"/>
 			<br><br>
 			<h2>Programs</h2>
-			<img style = "margin-right: 50px;" class = "logo" src = "AndroidStudio.png"/>
-			<img style = "margin-right: 50px;" class = "logo" src = "Unity.png"/>
-			<img style = "margin-right: 50px;" class = "logo" src = "Photoshop.jpg"/>
+			<a href = "https://developer.android.com/studio/index.html">
+				<img style = "margin-right: 50px;" class = "logo" src = "AndroidStudio.png"/>
+			</a>
+			<a href = "https://unity3d.com">
+				<img style = "margin-right: 50px;" class = "logo" src = "Unity.png"/>
+			</a>
+			<a href = "http://www.photoshop.com">
+				<img style = "margin-right: 50px;" class = "logo" src = "Photoshop.jpg"/>
+			</a>
 			<br><br>
-			<img style = "margin-right: 50px;" class = "logo" src = "Eclipse.png"/>
-			<img style = "margin-right: 50px;" class = "logo" src = "VisualStudio.png"/>
-			<img style = "margin-right: 50px;" class = "logo" src = "R.png"/>
+			<a href = "https://eclipse.org">
+				<img style = "margin-right: 50px;" class = "logo" src = "Eclipse.png"/>
+			</a>
+			<a href = "https://www.visualstudio.com/en-us/visual-studio-homepage-vs.aspx">
+				<img style = "margin-right: 50px;" class = "logo" src = "VisualStudio.png"/>
+			</a>
+			<a href = "https://www.rstudio.com">
+				<img style = "margin-right: 50px;" class = "logo" src = "R.png"/>
+			</a>
 			
 		</div>
 		
