Updated resume and profile picture.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 		
 		<div id = "Home" class = "tabcontent">
 			<br>
-			<center><img class = "main_pics" src = "ProfilePic.png"/></center>
+			<center><img class = "main_pics" src = "ProfilePicture.png"/></center>
 			<br><br>
 			<center><a href = "http://uci.edu/"><img src = "UCI_Words.png"/></a></center>
 			<br><br>
-			<center><a id = "resume" href = "AnujShah.pdf" download>Download R&eacute;sum&eacute; </a></center>
+			<center><a id = "resume" href = "Anuj_Shah-Resume.pdf" download>Download R&eacute;sum&eacute; </a></center>
 		</div>
 
 		<div id = "About Me" class = "tabcontent">
