Created folders for images and updated content.

--- a/index.html
+++ b/index.html
@@ -4,134 +4,134 @@
 		<title>Anuj Shah</title>
 		<link rel="icon" href="favicon.png">
 		<link href = "https://fonts.googleapis.com/css?family=Dosis|Poiret+One|Tangerine|Architects+Daughter|Raleway" rel = "stylesheet">
-		<link rel = "stylesheet" type = "text/css" href = "AnujShah.css">
+		<link rel = "stylesheet" type = "text/css" href = "css/AnujShah.css">
 	</head>
-	
+
 	<body>
-		
+
 		<h1 class = "text">Anuj Shah</h1>
-		
+
 		<ul class = "tab">
 		  <li><a href = "#Home" class = "tablinks" onclick = "openTab(event, 'Home')">Home</a></li>
 		  <li><a href = "#AboutMe" class = "tablinks" onclick = "openTab(event, 'About Me')">About Me</a></li>
 		  <li><a href = "#Expertise" class = "tablinks" onclick = "openTab(event, 'Expertise')">Programming Expertise</a></li>
 		  <li><a href = "#Contact" class = "tablinks" onclick = "openTab(event, 'Contact')">Contact</a></li>
 		</ul>
-		
+
 		<div id = "Home" class = "tabcontent">
 			<br>
-			<center><img class = "main_pics" src = "ProfilePicture.png"/></center>
+			<center><img class = "main_pics" src = "Profile-Pictures/ProfilePicture.png"/></center>
 			<br><br>
-			<center><a href = "http://uci.edu/"><img src = "UCI_Words.png"/></a></center>
+			<center><a href = "http://uci.edu/"><img src = "UCI/UCI_Words.png"/></a></center>
 			<br><br>
 			<center><a id = "resume" href = "Anuj_Shah-Resume.pdf" download>Download R&eacute;sum&eacute; </a></center>
 		</div>
 
 		<div id = "About Me" class = "tabcontent">
-		
+
 			<br>
-			
+
 			<h2 class = "section">Places I've Worked</h2>
 			<a href = "http://www.greenburghny.com/">
-				<img class = "logo" src = "Greenburgh_Logo.gif"/>
+				<img class = "logo" src = "Work/Greenburgh_Logo.gif"/>
 			</a>
 			<a href = "http://www.wayup.com/">
-				<img class = "logo" src = "WayUp_Logo.jpg"/>
+				<img class = "logo" src = "Work/WayUp_Logo.jpg"/>
 			</a>
 			<a href = "http://www.iacapps.com/">
-				<img class = "logo" src = "IAC_Applications_Logo.png"/>
+				<img class = "logo" src = "Work/IAC_Applications_Logo.png"/>
 			</a>
 			<a href = "http://www.joyrun.com/">
-				<img class = "logo" src = "JoyRun_Logo.png"/>
+				<img class = "logo" src = "Work/JoyRun_Logo.png"/>
 			</a>
 			<a href = "http://www.idtech.com/locations/new-york-summer-camps/new-york/id-programming-nyu/">
-				<img class = "logo" src = "iD_Tech_Logo.png"/>
+				<img class = "logo" src = "Work/iD_Tech_Logo.png"/>
 			</a>
-			
+
 			<h2 class = "section">HackUCI
 				<a href = "http://hackuci.com/"/>
-					<img src = "HackUCI_Logo.png"/>
+					<img src = "Hack/HackUCI_Logo.png"/>
 				</a>
 				<a href = "http://hack.ics.uci.edu/"/>
-					<img src = "Hack_Logo.png"/>
+					<img src = "Hack/Hack_Logo.png"/>
 				</a>
 			</h2>
-			<img class = "about" src = "HackUCI2015_Group.jpg"/>
-			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>HackUCI is a 3-day hackathon at UC Irvine where hundreds of college students come together to develop software from scratch to win prizes. As the Director of Corporate Outreach, I am responsible for contacting sponsors to attend our annual event. In November 2015, we hosted our second hackathon at the eSports Arena in Santa Ana, California. Read more about it <a href = "https://hack.ics.uci.edu/2015/11/23/hackuci-2015/">here!</a></i></h3>					
-			
+			<img class = "about" src = "Hack/HackUCI2015_Group.jpg"/>
+			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>HackUCI is a 3-day hackathon at UC Irvine where hundreds of college students come together to develop software from scratch to win prizes. As the Director of Corporate Outreach, I am responsible for contacting sponsors to attend our annual event. In November 2015, we hosted our second hackathon at the eSports Arena in Santa Ana, California. Read more about it <a href = "https://hack.ics.uci.edu/2015/11/23/hackuci-2015/">here!</a></i></h3>
+
 			<h2 class = "section">Sonder VR</h2>
 			<!--<img src = "Butterworth.jpg"/>-->
-			<img class = "about" src = "Ingenuity.jpg"/>
-			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>Sonder VR is an application that helps people with Autism Spectrum Disorder learn and practice their social skills. I helped develop the application in Unity and create the business case for the product. Our application uses virtual reality to teach kids with autism about body language. We had participated in the <a href = "http://tech.uci.edu/competitions/">Butterworth Development Competition at UCI</a> and won first place!</i></h3>
-			
+			<img class = "about" src = "Sonder-VR/Ingenuity.jpg"/>
+			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>Sonder VR is an application that helps people with Autism Spectrum Disorder learn and practice their social skills. I helped develop the application in Unity and create the business case for the product. Our application uses virtual reality to teach kids with autism about body language. We had participated in the <a href = "http://tech.uci.edu/competitions/past-2016.php">Butterworth Development Competition at UCI</a> and won first place!</i></h3>
+
 			<h2 class = "section">Space Gods
 				<a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGods.zip">
-					<img class = "mini_logo" src = "Windows_Logo.png"/>
+					<img class = "mini_logo" src = "Space-Gods/Windows_Logo.png"/>
 				</a>
 				<a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGodsApp.zip">
-					<img class = "mini_logo" src = "Apple_Logo.png"/>
+					<img class = "mini_logo" src = "Space-Gods/Apple_Logo.png"/>
 				</a>
 			</h2>
-			<img src = "Space_Gods.png"/>
+			<img src = "Space-Gods/Space_Gods.png"/>
 			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>Space Gods is a 2D arena-based fighting game where you battle gods from different universes. For this game project, I collaborated with 10+ developers. I was in charge of programming the game and creating the sound effects. Our game is available for download on <a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGods.zip">PC</a> and <a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGodsApp.zip">Mac</a>. Check it out!</i></h3>
-			
+
 			<h2 class = "section">The Simple Approach
 				<a href = "https://www.facebook.com/simpleapproach">
-					<img class = "mini_logo" src = "Facebook_Logo.png"/>
+					<img class = "mini_logo" src = "Simple-Approach/Facebook_Logo.png"/>
 				</a>
 				<a href = "http://www.youtube.com/user/SimpleApproachBand">
-					<img class = "mini_logo" src = "YouTube_Logo.png"/>
+					<img class = "mini_logo" src = "Simple-Approach/YouTube_Logo.png"/>
 				</a>
 				<a href = "http://soundcloud.com/the-simple-approach">
-					<img class = "mini_logo" src = "SoundCloud_Logo.png"/>
+					<img class = "mini_logo" src = "Simple-Approach/SoundCloud_Logo.png"/>
 				</a>
 			</h2>
-			<img class = "about" src = "Band_Instruments.jpg"/>
+			<img class = "about" src = "Simple-Approach/Band_Instruments.jpg"/>
 			<br><br>
-			<img class = "about" src = "Simple_Approach_Black.jpg"/>
+			<img class = "about" src = "Simple-Approach/Simple_Approach_Black.jpg"/>
 			<br><br>
-			<img class = "about" src = "Simple_Approach_Performing.jpg"/>
-			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>I'm the lead drummer in a classy rock band called The Simple Approach. For our senior project, we created an album of eleven original songs. Here are some pictures from our gig at the <a href = "http://greenburghnaturecenter.org/">Greenburgh Nature Center</a>.</i></h3>
-			
+			<img class = "about" src = "Simple-Approach/Simple_Approach_Performing.jpg"/>
+			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>I'm the lead drummer in a rock band called The Simple Approach. We recently created an album of eleven original songs. Here are some pictures from our gig at the <a href = "http://greenburghnaturecenter.org/">Greenburgh Nature Center</a>.</i></h3>
+
 		</div>
-		
+
 		<div id = "Expertise" class = "tabcontent">
 			<h2>Programming Languages</h2>
-			<img style = "margin-right: 50px;" class = "logo" src = "Java.png"/>
-			<img style = "margin-right: 50px;" class = "logo" src = "Python.png"/>
-			<img style = "margin-right: 50px;" class = "logo" src = "C++.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Programming-Languages/Java.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Programming-Languages/Python.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Programming-Languages/C++.png"/>
 			<br><br>
-			<img style = "margin-right: 50px;" class = "logo" src = "HTML.png"/>
-			<img style = "margin-right: 50px;" class = "logo" src = "CSS.png"/>
-			<img style = "margin-right: 50px;" class = "logo" src = "JavaScript.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Programming-Languages/HTML.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Programming-Languages/CSS.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Programming-Languages/JavaScript.png"/>
 			<br><br>
-			<img style = "margin-right: 50px;" class = "logo" src = "C.png"/>
-			<img style = "margin-right: 50px;" class = "logo" src = "PHP.png"/>
-			<img style = "margin-right: 50px;" class = "logo" src = "RLang.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Programming-Languages/C.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Programming-Languages/PHP.png"/>
+			<img style = "margin-right: 50px;" class = "logo" src = "Programming-Languages/RLang.png"/>
 			<br><br>
 			<h2>Programs</h2>
 			<a href = "https://developer.android.com/studio/index.html">
-				<img style = "margin-right: 50px;" class = "logo" src = "AndroidStudio.png"/>
+				<img style = "margin-right: 50px;" class = "logo" src = "Programs/AndroidStudio.png"/>
 			</a>
 			<a href = "https://unity3d.com">
-				<img style = "margin-right: 50px;" class = "logo" src = "Unity.png"/>
+				<img style = "margin-right: 50px;" class = "logo" src = "Programs/Unity.png"/>
 			</a>
 			<a href = "http://www.photoshop.com">
-				<img style = "margin-right: 50px;" class = "logo" src = "Photoshop.jpg"/>
+				<img style = "margin-right: 50px;" class = "logo" src = "Programs/Photoshop.jpg"/>
 			</a>
 			<br><br>
 			<a href = "https://eclipse.org">
-				<img style = "margin-right: 50px;" class = "logo" src = "Eclipse.png"/>
+				<img style = "margin-right: 50px;" class = "logo" src = "Programs/Eclipse.png"/>
 			</a>
 			<a href = "https://www.visualstudio.com/en-us/visual-studio-homepage-vs.aspx">
-				<img style = "margin-right: 50px;" class = "logo" src = "VisualStudio.png"/>
+				<img style = "margin-right: 50px;" class = "logo" src = "Programs/VisualStudio.png"/>
 			</a>
 			<a href = "https://www.rstudio.com">
-				<img style = "margin-right: 50px;" class = "logo" src = "R.png"/>
+				<img style = "margin-right: 50px;" class = "logo" src = "Programs/R.png"/>
 			</a>
-			
+
 		</div>
-		
+
 		<div id = "Contact" class = "tabcontent">
 			<h2>Contact Me</h2>
 			<!--<form id = "form" name = "contact_form" method = "post" action = "email_handler.php" onsubmit = "return validateForm()">
@@ -153,20 +153,20 @@
 				<br><br>
 			</form>-->
 			<br><br>
-			<img src = "Hack_Corporate_Business_Card.png"/>
+			<img src = "Hack/Hack_Corporate_Business_Card.png"/>
 			<br><br>
 			<a href = "http://www.linkedin.com/in/anujshah">
-				<img src = "LinkedIn_Logo.png"/>
+				<img src = "Contact/LinkedIn_Logo.png"/>
 			</a>
 			<!--<a href = "http://www.github.com/anujs3"/>
 				<img src = "GitHub_Logo.png"/>
 			</a>-->
 		</div>
-		
+
 		<br><br>
 		<a id = "up" href = "#top">Back to Top</a>
-		
-		<script src = "AnujShah.js"></script>
-		
+
+		<script src = "js/AnujShah.js"></script>
+
 	</body>
 </html>
