Added Symantec to places I've worked.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
 			<a href = "http://www.idtech.com/locations/new-york-summer-camps/new-york/id-programming-nyu/">
 				<img class = "logo" src = "Work/iD_Tech_Logo.png"/>
 			</a>
+			<a href = "https://www.symantec.com/">
+				<img class = "logo" src = "Work/Symantec_Logo.png"/>
+			</a>
 
 			<h2 class = "section">HackUCI
 				<a href = "http://hackuci.com/"/>
@@ -62,7 +65,7 @@
 			<h2 class = "section">Sonder VR</h2>
 			<!--<img src = "Butterworth.jpg"/>-->
 			<img class = "about" src = "Sonder-VR/Ingenuity.jpg"/>
-			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>Sonder VR is an application that helps people with Autism Spectrum Disorder learn and practice their social skills. I helped develop the application in Unity and create the business case for the product. Our application uses virtual reality to teach kids with autism about body language. We had participated in the <a href = "http://tech.uci.edu/competitions/past-2016.php">Butterworth Development Competition at UCI</a> and won first place!</i></h3>
+			<h3 style = "color: #5C5C5C; line-height: 2em;"><i>Sonder VR is an application that helps people with Autism Spectrum Disorder learn and practice their social skills. I helped develop the application in Unity and create the business case for the product. Our application uses virtual reality to teach kids with autism about body language. We participated in the <a href = "http://tech.uci.edu/competitions/past-2016.php">Butterworth Development Competition at UCI</a> and won first place!</i></h3>
 
 			<h2 class = "section">Space Gods
 				<a href = "https://dl.dropboxusercontent.com/u/14941389/webpage/games/SpaceGods.zip">
